--- a/src/html/pages-profile.html
+++ b/src/html/pages-profile.html
@@ -170,15 +170,15 @@ Get more page examples
 </a>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-xl-3">
+				<div class="col-md-6 col-xl-8">
 					<div class="card mb-3">
 						<div class="card-header">
 							<h5 class="card-title mb-0">Profile Details</h5>
 						</div>
 						<div class="card-body text-center">
 							<img src="img/avatars/avatar-4.jpg" alt="Christina Mason" class="img-fluid rounded-circle mb-2" width="128" height="128" />
-							<h5 class="card-title mb-0">Christina Mason</h5>
-							<div class="text-muted mb-2">Lead Developer</div>
+							<h5 class="card-title mb-0">Surbhi Rodi</h5>
+							<div class="text-muted mb-2">Networking Teacher</div>
 
 							<div>
 								<a class="btn btn-primary btn-sm" href="#">Follow</a>
